--- a/AspNetAtmApp/Views/Users/Index.cshtml
+++ b/AspNetAtmApp/Views/Users/Index.cshtml
@@ -8,8 +8,17 @@
 
 
 <p>
-    <a asp-action = "Create" asp-controller="Users">Create it</a>
+    <a asp-action ="Create"asp-controller="Users">Create it</a>
 </p>
+
+<form asp-action="Index" method:"get">
+    <div class="form-group">
+        <label for="searchField">Selecteer</label>
+        <input type="text" name="searchField" value="@ViewData["CurrentFilter"]"/>
+        <input type="submit" value="Search" class="btn btn-primary" />
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
